--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -26,11 +26,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> HOME
-              </a>
+            <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="documents.html">DOCUMENTS</a>
@@ -40,7 +39,9 @@
               class="nav-link dropdown-toggle active"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
@@ -48,13 +49,19 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
-              <img src="images/github-logo-grey.png" 
-                   onmouseover="this.src='images/github-logo.png';" 
-                   onmouseout="this.src='images/github-logo-grey.png';" 
-                   height="30" 
-                   width="30" 
-                   alt="Github link"/> </a>
+            <a
+              class="navbar-brand"
+              href="https://github.com/mlgarrett/glacies-indicium"
+              target="_blank"
+            >
+              <img
+                src="images/github-logo-grey.png"
+                onmouseover="this.src='images/github-logo.png';"
+                onmouseout="this.src='images/github-logo-grey.png';"
+                height="30"
+                width="30"
+                alt="Github link"
+              />
             </a>
           </li>
         </ul>
@@ -63,54 +70,124 @@
     <div class="jumbotron-fluid text-center">
       <h2>Schedule</h2>
     </div>
-
-    <div class="row text-left">
-      <div class="col">
-        <ol type="I">
-          <img src="images/schedule.png" />
-          <li class="p-2">
-            Up to October 9<sup>th</sup>
-            <p class="li-p">
-              Up to this point the team has been working to outline and define
-              the scope of the project as well as the project requirements. By
-              10/9 the team will have an almost complete Tech Feasibility
-              document which will completely outline the technologies we will
-              use for this project.
-            </p>
-          </li>
-          <li class="p-2">
-            Up to October 23<sup>rd</sup>
-            <p class="li-p">
-              Up to this point each member of the team should feel sufficiently
-              experienced in the technologies we will be using for this project.
-              Work will have begun on a working prototype.
-            </p>
-          </li>
-          <li class="p-2">
-            Up to November 9<sup>th</sup>
-            <p class="li-p">
-              Up to this point the team has been working to outline and define
-              the scope of the project as well as the project requirements. By
-              10/9 the team will have an almost complete Tech Feasibility
-              document which will completely outline the technologies we will
-              use for this project.
-            </p>
-          </li>
-          <li class="p-2">
-            End of Term
-            <p class="li-p">
-              The team will have presented their prototype to the team mentor
-              and client (as requested). At this point we want to reevaluate
-              with the client any potential stretch goals to be completed in the
-              following semester.
-            </p>
-          </li>
-        </ol>
+    <div class="row text-center animation-element slide-left">
+      <div class="col-8">
+        <h2>Spring 2021 Development Plan</h2>
       </div>
     </div>
-
-    <script src="js/script.js"></script>
+    <div class="row text-center animation-element slide-left"">
+      <div class="col-12">
+        <img src="images/schedule.png" class="img-fluid" alt="Team Schedule" />
+      </div>
+    </div>
+    <div class="row text-center animation-element slide-left">
+      <div class="col-8">
+        <h2>Development Goals Remaining</h2>
+      </div>
+    </div>
+    <div class="row text-center justify-content-center animation-element slide-left"">
+      <div class="col-8 table-responsive">
+        <div class="key-row text-left">
+          <div class="key-container green">
+            <div class="dot"></div>
+            Completed
+          </div>
+          <div class="key-container yellow">
+            <div class="dot"></div>
+            In progress
+          </div>
+          <div class="key-container red">
+            <div class="dot"></div>
+            Impeded
+          </div>
+        </div>
+        <table class="table table-bordered text-left">
+          <thead>
+            <tr>
+              <th scope="col">Goal</th>
+              <th scope="col">Module</th>
+              <th scope="col">Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row">Finalize product specifications</td>
+              <td></td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Regional identification</td>
+              <td>Image Preprocessing System</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Mosaic generation</td>
+              <td>Image Preprocessing System</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Band extraction</td>
+              <td>Image Preprocessing System</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Region/band filtering ui</td>
+              <td>Frontend</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Map projection change</td>
+              <td>Frontend</td>
+              <td>
+                <div class="key-container yellow">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Data download functionality</td>
+              <td>Frontend</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td scope="row">Server deployment procedures</td>
+              <td>Backend</td>
+              <td>
+                <div class="key-container green">
+                  <div class="dot"></div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
