--- a/TeamWebsite/technologies.html
+++ b/TeamWebsite/technologies.html
@@ -31,7 +31,7 @@
               </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="documents.html">DOCUMENTS</a>
@@ -69,29 +69,29 @@
         <h2>Languages</h2>
       </div>
       <div class="card-deck justify-content-center">
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/python-logo.png" alt="Python logo">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">Python was used becuase it provided many features such as 
+            <p class="card-text technology-card" style="max-width: 100%;">Python was used becuase it provided many features such as 
               creating a database, starting a webserver and providing API endpoints for the front end to access. Python was also used in this project for the preprocessing
               module to seperate each GeoTIFF file by band and then create mosaic images for each region.
             </p>
           </div>
         </div>
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/javascript-jquery-logo-copy.png" alt="JavaScript / jQuery logo">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               JavaScript along with jQuery was used primarily for creating and manging the user interface. 
               JavaScript provides easy access to the elements on the webpage and jQuery helps create JavaScript code that is cleaner
               and easier to maintain. 
             </p>
           </div>
         </div>
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/node-logo.svg" alt="Node logo" >
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               Node JS was used because of the expansive amount of libraries availible for testing on the front end modules and ensuring
               that they produce the correct output.
             </p>
@@ -102,37 +102,37 @@
         <h2>Libraries</h2>
       </div>
       <div class="card-deck justify-content-center">
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/terracotta-logo.svg" alt="Terracotta logo">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               Terracotta was used because of the built in tiling server that automatically ingests GeoTIFF files and converts the files
               into smaller png images which can then be called in the front end for faster loading times.
             </p>
           </div>
         </div>
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/rasterio-logo.png" alt="Raster io logo"  style="width: 50px; margin-left:auto; margin-right:auto;">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               Raster IO was used to determine the location of each GeoTIFF file and then properly create a mosaic for each region specified in an input file 
               which can then be viewed in the user interface.
             </p>
           </div>
         </div>
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/leaflet-logo.png" alt="Leaflet logo">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               Leaflet was used to create the interactive map on the user interface which provided functionality to dynamically load and view 
               each layer that was called from the SQL database. 
             </p>
           </div>
         </div>
-        <div class="card p-2"  style="max-width: 18rem;">
+        <div class="card p-2 animation-element slide-left"  style="max-width: 22rem;">
           <img class="card-img-top" src="images/halfmoon-logo.svg" alt="Terracotta logo">
           <div class="card-block">
-            <p class="card-text" style="max-width: 100%;">
+            <p class="card-text technology-card" style="max-width: 100%;">
               Halfmoon was chosen for its overall ease of use to develop a clean and responsive user interface that is built upon Bootstrap, and it provides 
               extra features such a toggle for dark mode.
             </p>
@@ -140,8 +140,8 @@
         </div>
        </div>
     </div>
-    <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
