--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="documents.html">DOCUMENTS</a>
