--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -10,8 +10,6 @@
 
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
-
-    <!--Link to icon library-->
     <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
@@ -32,7 +30,7 @@
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="documents.html">DOCUMENTS</a>
@@ -42,7 +40,9 @@
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
@@ -50,13 +50,19 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank"> 
-              <img src="images/github-logo-grey.png" 
-                   onmouseover="this.src='images/github-logo.png';" 
-                   onmouseout="this.src='images/github-logo-grey.png';" 
-                   height="30" 
-                   width="30" 
-                   alt="Github link"/> </a>
+            <a
+              class="navbar-brand"
+              href="https://github.com/mlgarrett/glacies-indicium"
+              target="_blank"
+            >
+              <img
+                src="images/github-logo-grey.png"
+                onmouseover="this.src='images/github-logo.png';"
+                onmouseout="this.src='images/github-logo-grey.png';"
+                height="30"
+                width="30"
+                alt="Github link"
+              />
             </a>
           </li>
         </ul>
@@ -146,6 +152,34 @@
                 <iframe
                   class="resp-iframe"
                   src="https://www.youtube.com/embed/uaTLV7b6J34"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="panel-group list-group-item list-group-item-action"
+          style="background-color: #f9f9f9"
+        >
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <a
+                class="dropdrown-link"
+                data-toggle="collapse"
+                href="#collapse3"
+                onclick="toggleDropdown(this)"
+              >
+                Design Review 3 <i class="fa fa-angle-up ml-2"></i
+              ></a>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+              <div class="iframe-container">
+                <iframe
+                  class="resp-iframe"
+                  src="https://www.youtube.com/embed/-dYBawxkSss"
                   frameborder="0"
                   allowfullscreen
                 ></iframe>
