--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -16,22 +16,24 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
+        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+      >
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown">
+        data-target="#navbarNavDropdown"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"> 
+            <a class="nav-link" href="index.html">
               HOME <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="documents.html">DOCUMENTS</a>
@@ -41,7 +43,9 @@
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
@@ -49,81 +53,118 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
-              <img src="images/github-logo-grey.png" 
-                   onmouseover="this.src='images/github-logo.png';" 
-                   onmouseout="this.src='images/github-logo-grey.png';" 
-                   height="30" 
-                   width="30" 
-                   alt="Github link"/> </a>
+            <a
+              class="navbar-brand"
+              href="https://github.com/mlgarrett/glacies-indicium"
+              target="_blank"
+            >
+              <img
+                src="images/github-logo-grey.png"
+                onmouseover="this.src='images/github-logo.png';"
+                onmouseout="this.src='images/github-logo-grey.png';"
+                height="30"
+                width="30"
+                alt="Github link"
+              />
             </a>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid justify-content-center">
+    <div class="jumbotron jumbotron-fluid justify-content-center" id="homepage-jumbotron">
+      <div class="overlay"></div>
       <h1 class="display-4 h1-responsive">visualizing antarctica</h1>
       <div class="container-fluid justify-content-center" id="jumbo-p">
         <p class="lead">
-          Because the Antarctic continent is the most isolated continent
-          on Earth, scientists look to its unmodified landscape to study
-          a range of natural phenomena. In order to preserve the Antarctic's
-          pristine environment, scientists have begun using satellite images
-          to remotely study its landscape, but using these images has become
-          a challenge in itself.
+          Because the Antarctic continent is the most isolated continent on Earth,
+          scientists look to its unmodified landscape to study a range of natural
+          phenomena. In order to preserve the Antarctic's pristine environment, scientists
+          have begun using satellite images to remotely study its landscape, but using
+          these images has become a challenge in itself.
         </p>
       </div>
-        <a href="#home-about">
-            <img src="images/scroll-arrow.png" class="scrollbtn" height="50" width="50" alt="scroll arrow"/>
-        </a>
+      <a href="#home-about">
+        <i class="fas fa-angle-down scrollbtn" id="arrow-down"></i>
+      </a>
     </div>
     <div class="container-fluid justify-content-center">
-      <div class="row justify-content-center" id="home-about">
-        <h3>About the Project</h3>
-      </div>
-      <div class="row justify-content-center">
-        <p>
-          Scientists use satellite images like the ones shown below to perform
-          their investigations. Each image is stored as a GeoTIFF file that contains geological reference
-          information like geographical coordinates of where the image is from.
-          Each image may also have multiple spectral bands of the image, so that
-          the image can be viewed from multiple different segments of the
-          electromagnetic spectrum. This allows geologists to see different geological
-          components that aren't visible on the normal satellite image.
-        </p>
-      </div>
-      <div class="row justify-content-center" id="home-about">
-        <h3>
-          <a href="http://capstone.rabbitlabs.us:8080/" target="_blank">View the Project <i class="fas fa-external-link-alt" style="color: #007bff;"></i></a>
-        </h3>
-      </div>
-      <div class="row justify-content-center">
+      <div class="row mt-5">
+        <div class="col-xs-12 col-md-8">
+          <h3 id="home-about">About the Project</h3>
+          <p id="about-description">
+            Scientists use satellite images like the ones shown below to perform their
+            investigations. Each image is stored as a GeoTIFF file that contains
+            geological reference information like geographical coordinates of where the
+            image is from. Each image may also have multiple spectral bands of the image,
+            so that the image can be viewed from multiple different segments of the
+            electromagnetic spectrum. This allows geologists to see different geological
+            components that aren't visible on the normal satellite image.
+            <br />
+            <a
+              class="btn-round btn-info btn-sm"
+              href="http://capstone.rabbitlabs.us:8080/"
+              role="button"
+              target="_blank"
+              data-aos="fade-up"
+              id="demo-link"
+              >VIEW DEMO</a
+            >
+          </p>
+        </div>
+        <div class="col-xs-12 col-md-4">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="images/geotiff.png" alt="first geotiff image"/>
+                <img
+                  class="d-block w-100"
+                  src="images/geotiff.PNG"
+                  alt="first geotiff image"
+                />
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="images/geotiff1.png" alt="second geotiff image"/>
+                <img
+                  class="d-block w-100"
+                  src="images/geotiff1.PNG"
+                  alt="second geotiff image"
+                />
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="images/geotiff2.png" alt="third geotiff image"/>
+                <img
+                  class="d-block w-100"
+                  src="images/geotiff2.PNG"
+                  alt="third geotiff image"
+                />
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="images/geotiff3.png" alt="fourth geotiff image"/>
+                <img
+                  class="d-block w-100"
+                  src="images/geotiff3.PNG"
+                  alt="fourth geotiff image"
+                />
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
         </div>
       </div>
+    </div>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
