--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -41,7 +41,7 @@
               aria-haspopup="true"
               aria-expanded="false">MORE INFO</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              <a class="dropdown-item" href="requirements.html">REQUIREMENTS</a>
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
