Updated user interface with search functionality and better styling

--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -33,6 +33,9 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="team.html">OUR TEAM</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
