--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -29,6 +29,9 @@
             <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="team.html">OUR TEAM</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
           </li>
           <li class="nav-item">
