--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -9,8 +9,6 @@
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
-
-    <!--Link to icon library-->
     <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
@@ -27,45 +25,55 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> HOME
-              </a>
+            <a class="nav-link" href="index.html"> HOME </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="team.html">OUR TEAM<span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="team.html">OUR TEAM</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="requirements.html">REQUIREMENTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="documents.html">DOCUMENTS</a>
+          </li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="requirements.html">REQUIREMENTS</a>
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
-              <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
-              <img src="images/github-logo-grey.png" 
-                   onmouseover="this.src='images/github-logo.png';" 
-                   onmouseout="this.src='images/github-logo-grey.png';" 
-                   height="30" 
-                   width="30" 
-                   alt="Github link"/> </a>
+            <a
+              class="navbar-brand"
+              href="https://github.com/mlgarrett/glacies-indicium"
+              target="_blank"
+            >
+              <img
+                src="images/github-logo-grey.png"
+                onmouseover="this.src='images/github-logo.png';"
+                onmouseout="this.src='images/github-logo-grey.png';"
+                height="30"
+                width="30"
+                alt="Github link"
+              />
             </a>
           </li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron jumbotron-fluid text-center">
-      <h2>Our Team</h2>
+      <h2>Team Members</h2>
     </div>
     <div class="container-fluid text-center">
-      <div class="row padding-top-md justify-content-center">
+      <div class="row padding-top-md justify-content-center animation-element slide-left">
         <div class="col-md-2 col-sm-4">
           <img
             src="images/joe.jpg"
@@ -140,7 +148,7 @@
       <hr class="my-4" />
       <h5>Team Clients & Mentor</h5>
 
-      <div class="row padding-top-md justify-content-center">
+      <div class="row padding-top-md justify-content-center animation-element slide-left">
         <div class="col-md-4 col-sm-4">
           <img
             src="images/roo.jpg"
@@ -179,8 +187,8 @@
           </p>
         </div>
       </div>
-    <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
