Updated team website to fix jQuery console errors and updated web app styles for mobile, changed layer info to be modal

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Team Documents - Glacies Indicium</title>
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
 
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+        <img src="images/header_large.png" height="50" width="50" /> GLACIES INDICIUM</a
       >
       <button
         class="navbar-toggler ml-auto"
@@ -78,23 +78,30 @@
       <div class="list-group list-group-flush">
         <a
           href="documents/TeamStandards.pdf"
+          target="_blank"
           class="list-group-item list-group-item-action"
         >
           Team Standards
         </a>
         <a
           href="documents/TeamInventory.pdf"
+          target="_blank"
           class="list-group-item list-group-item-action"
         >
           Team Inventory
         </a>
 
-        <a href="documents/MiniIntro.pdf" class="list-group-item list-group-item-action">
+        <a
+          href="documents/MiniIntro.pdf"
+          target="_blank"
+          class="list-group-item list-group-item-action"
+        >
           Mini Intro Presentation
         </a>
 
         <a
           href="documents/TechnologyFeasibility.pdf"
+          target="_blank"
           class="list-group-item list-group-item-action"
         >
           Technology Feasibility
@@ -102,6 +109,7 @@
 
         <a
           href="documents/RequirementsSpecification.pdf"
+          target="_blank"
           class="list-group-item list-group-item-action"
         >
           Requirements Document
@@ -133,6 +141,7 @@
 
         <a
           href="documents/SoftwareDesignDocument.pdf"
+          target="_blank"
           class="list-group-item list-group-item-action"
         >
           Software Design Document
@@ -190,10 +199,18 @@
             </div>
           </div>
         </div>
+
+        <a
+          href="documents/GlaciesIndicium_Poster_CS486.pdf"
+          target="_blank"
+          class="list-group-item list-group-item-action"
+        >
+          Capstone Final Poster
+        </a>
       </div>
     </div>
-    <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
