--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Team Schedule - Glacies Indicium</title>
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+        <img src="images/header_large.png" height="50" width="50" /> GLACIES INDICIUM</a
       >
       <button
         class="navbar-toggler ml-auto"
@@ -73,23 +73,24 @@
     <div class="jumbotron-fluid text-center">
       <h2>Schedule</h2>
     </div>
-    <div class="row text-center animation-element slide-left">
-      <div class="col-8">
-        <h2>Spring 2021 Development Plan</h2>
+    <div class="container-fluid">
+      <div class="row text-center animation-element slide-left">
+        <div class="col-md-8 col-xs-12">
+          <h2>Spring 2021 Development Plan</h2>
+        </div>
       </div>
-    </div>
-    <div class="row text-center animation-element slide-left"">
-      <div class="col-12">
-        <img src="images/schedule.png" class="img-fluid" alt="Team Schedule" />
+      <div class="row text-center animation-element slide-left">
+        <div class="col-12">
+          <img src="images/schedule.png" class="img-fluid" alt="Team Schedule" />
+        </div>
       </div>
-    </div>
-    <div class="row text-center animation-element slide-left">
-      <div class="col-8">
-        <h2>Development Goals Remaining</h2>
+      <div class="row text-center animation-element slide-left">
+        <div class="col-md-8 col-xs-12">
+          <h2>Development Goals Remaining</h2>
+        </div>
       </div>
-    </div>
-    <div class="row text-center justify-content-center animation-element slide-left"">
-      <div class="col-8 table-responsive">
+      <div class="row text-center justify-content-center animation-element slide-left"">
+      <div class="col-md-8 col-xs-12 table-responsive">
         <div class="key-row text-left">
           <div class="key-container green">
             <div class="dot"></div>
