--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Team Members - Glacies Indicium</title>
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/all.min.css" />
@@ -14,11 +14,13 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
+        <img src="images/header_large.png" height="50" width="50" /> GLACIES INDICIUM</a
+      >
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown">
+        data-target="#navbarNavDropdown"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -75,15 +77,11 @@
     <div class="container-fluid text-center">
       <div class="row padding-top-md justify-content-center animation-element slide-left">
         <div class="col-md-2 col-sm-4">
-          <img
-            src="images/joe.jpg"
-            class="profile-image"
-            alt="Joe Profile Image"
-          />
+          <img src="images/joe.jpg" class="profile-image" alt="Joe Profile Image" />
           <div class="justify-contents-center">
             <p class="image-caption">
-              <strong>Joe Carter</strong><br>
-              Team Lead<br>
+              <strong>Joe Carter</strong><br />
+              Team Lead<br />
             </p>
           </div>
         </div>
@@ -96,8 +94,8 @@
           />
           <div class="justify-contents-center">
             <p class="image-caption">
-              <strong>Kassandra Coxen</strong><br>
-              Recorder<br>
+              <strong>Kassandra Coxen</strong><br />
+              Recorder<br />
             </p>
           </div>
         </div>
@@ -110,8 +108,8 @@
           />
           <div class="justify-contents-center">
             <p class="image-caption">
-              <strong>Beck Bohnker</strong><br>
-              Customer Communicator<br>
+              <strong>Beck Bohnker</strong><br />
+              Customer Communicator<br />
             </p>
           </div>
         </div>
@@ -124,8 +122,8 @@
           />
           <div class="justify-contents-center">
             <p class="image-caption">
-              <strong>Logan Garrett</strong><br>
-              Quality Assurance<br>
+              <strong>Logan Garrett</strong><br />
+              Quality Assurance<br />
             </p>
           </div>
         </div>
@@ -138,8 +136,8 @@
           />
           <div class="justify-content-center">
             <p class="image-caption">
-              <strong>Zach Spielberger</strong><br>
-              Architect<br>
+              <strong>Zach Spielberger</strong><br />
+              Architect<br />
             </p>
           </div>
         </div>
@@ -156,7 +154,7 @@
             alt="Andrew Abraham Profile Image"
           />
           <p class="image-caption">
-            <strong>Andrew Abraham</strong><br>
+            <strong>Andrew Abraham</strong><br />
             Team Mentor
           </p>
         </div>
@@ -168,8 +166,8 @@
             alt="Dr. Mark Salvatore profile image"
           />
           <p class="image-caption">
-            <strong>Dr. Mark Salvatore</strong><br>
-            Northern Arizona University<br>
+            <strong>Dr. Mark Salvatore</strong><br />
+            Northern Arizona University<br />
             Assistant Professor Department of Planetary Science
           </p>
         </div>
@@ -181,12 +179,13 @@
             alt="Dr. Heather Lynch profile image"
           />
           <p class="image-caption">
-            <strong>Dr. Heather Lynch</strong><br>
-            Stony Brook University<br>
+            <strong>Dr. Heather Lynch</strong><br />
+            Stony Brook University<br />
             Professor Department of Ecology and Evolution
           </p>
         </div>
       </div>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
