--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Demos - Glacies Indicium</title>
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
 
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+        <img src="images/header_large.png" height="50" width="50" /> GLACIES INDICIUM</a
       >
       <button
         class="navbar-toggler ml-auto"
@@ -45,7 +45,9 @@
               class="nav-link dropdown-toggle active"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
@@ -53,13 +55,19 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
-              <img src="images/github-logo-grey.png" 
-                   onmouseover="this.src='images/github-logo.png';" 
-                   onmouseout="this.src='images/github-logo-grey.png';" 
-                   height="30" 
-                   width="30" 
-                   alt="Github link"/> </a>
+            <a
+              class="navbar-brand"
+              href="https://github.com/mlgarrett/glacies-indicium"
+              target="_blank"
+            >
+              <img
+                src="images/github-logo-grey.png"
+                onmouseover="this.src='images/github-logo.png';"
+                onmouseout="this.src='images/github-logo-grey.png';"
+                height="30"
+                width="30"
+                alt="Github link"
+              />
             </a>
           </li>
         </ul>
@@ -94,10 +102,34 @@
             </div>
           </div>
         </div>
+        <div class="panel-group list-group-item list-group-item-action">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <a
+                class="dropdrown-link"
+                data-toggle="collapse"
+                href="#collapse3"
+                onclick="toggleDropdown(this)"
+              >
+                Capstone Presentation <i class="fa fa-angle-up ml-2"></i
+              ></a>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+              <div class="iframe-container">
+                <iframe
+                  class="resp-iframe"
+                  src="https://www.youtube.com/embed/RCDhoBDanR8"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
