--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Glacies Indicium</title>
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
 
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+        <img src="images/header_large.png" height="50" width="50" /> GLACIES INDICIUM</a
       >
       <button
         class="navbar-toggler ml-auto"
@@ -168,8 +168,8 @@
         </div>
       </div>
     </div>
-    <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
